--- a/draft.tex
+++ b/draft.tex
@@ -314,7 +314,7 @@ There exists a completion $\hat{\profile} \in C(\pprofile)$ such that $\PMR(x,y;
 \end{claim}
 %In this claim, we abuse notation by writing ${\pref_j} \in \profile$ to mean that the preference ordering corresponding to agent $j$ in $\profile$ is $\pref_j$.
 \noindent It follows that $\hat{v}_{j}(x)$, the rank of $x$ for voter $j$ in the PMR-maximizing linear order $\bar{v}_{j}$ %$\PMR(x,y; \pprofile, W)$ 
-is $\hat{v}_{j}(x) = 1+\card{A}-\card{{\ppref_j}(x)}$, where ${\ppref_j}(x)$ designates the set of alternatives that are less good than $x$ according to $\ppref_j$, and the rank of $y$ is $\hat{v}_{j}(x)=1+\card{{\pprefinv_j}(y)}+\beta$, where $\beta = \card{A} - \card{{\ppref_j}(x)}$ if $(x \ppref_j y)$ and $\alpha = 0$ otherwise.
+is $\hat{v}_{j}(y) = 1+\card{A}-\card{{\ppref_j}(x)}$, where ${\ppref_j}(x)$ designates the set of alternatives that are less good than $x$ according to $\ppref_j$, and the rank of $y$ is $\hat{v}_{j}(x)=1+\card{{\pprefinv_j}(y)}+\beta$, where $\beta = \card{A} - \card{{\ppref_j}(x)}$ if $(x \ppref_j y)$ and $\beta = 0$ otherwise.
 
 %Proof: Define $\pref$ as just $\ppref_j$ with the arcs added to minimally satisfy the above. Thus, add the following arcs: when $x ? a$, add $a > x$. When $a ? y ∧ x \ppref_j y ∧ ¬(x \ppref_j a)$, add $a \pref y$. When $a ? y ∧ [¬(x \ppref_j y) ∨ (x \ppref_j a)]$, add $y \pref a$. Observe that $\ppref_j \subseteq \pref$. We have to show that it is acyclic. (Then we take its transitive closure to make it a partial order, and it’s done.) Note that if there is a cycle in $\pref$, it’s because of some new arcs, as $\ppref_j$ is acyclic. Thus, the cycle must go through one of these new arcs. …
 
@@ -435,7 +435,9 @@ As a first attempt to make this question concrete, let us define a profile $P$ c
 Define an alternative $a$ that receives $q$ times the rank $r$ and $p$ times the rank $r+2$ and an alternative $b$ that receives $p+q$ times the rank $r+1$. 
 Observing that the score of $a$ in that profile is exactly the left hand side of the question, and that the score of $b$ is the right hand side, intuition suggests that observing whether the chair picks $a$ or $b$ as winner will let us determine which side is greater; equality occurring when the chair declares $a$ and $b$ as tied for the victory. 
 However, we still need to complete the profile, thus, come up with other $m-2$ alternatives defined so that each agent in the resulting profile has placed exactly one alternative in each rank. 
-And we must ensure, doing this, that these other alternatives are not better than $a$ or $b$.\footnote{Because, if the chair picks a different alternative $c$, it only tells us that the chair prefers $c$ to both $a$ and $b$, but it generally does not answer the question we are interested in.} 
+And we must ensure, doing this, that these other alternatives are not better than $a$ or $b$.\footnote{Because, if the chair picks a different alternative $c$, it tells us that the chair prefers $c$ to both $a$ and $b$, 
+%but it generally does not  answer the question we are interested in
+but in general we do not acquire the type of constraint we are interested in.} 
 Taking $p = q = 1$, $m=4$, $r=2$, we see that such a completion may be impossible. Luckily, this problem can be worked around, at the price of increasing the number of agents. 
 
 First build a temporary profile $P$ of $p+q$ agents with $a$ and $b$ ranked as just described. Complete it with $m-2$ alternatives ranked in arbitrary orders so that the resulting profile has complete strict rankings for each of the $p+q$ voter. Now we will make the other alternatives as bad as desired by adding agents to $P$ that appreciate $a$ and $b$ more than the other alternatives, thus building a profile $P'$ in which, whatever the weights, $c$ may not have a better score than $a$. Observe that if we add $\delta$ agents (with $\delta$ a natural number) that put $a$ at first rank and $b$ at second rank, and $\delta$ agents that put $b$ at first rank and $a$ at second rank, we do not change the difference of the scores of $a$ and $b$, and thus, observing the chair choosing $a$ or $b$ still answers the question. Choose arbitrarily a matching of the remaining $m-2$ alternatives to the ranks $3$ to $m$, say, $c \mapsto 3$, $d \mapsto 4$, and so on. The first $\delta$ supplementary agents, who rank $a$ first and $b$ second, rank the other alternatives as the just defined mapping suggests. The other $\delta$ supplementary agents, who rank $b$ first and $a$ second, use the opposite ranking for the remaining alternatives, say, $c \mapsto m$, $d \mapsto m-1$, and so on. We can now prove that, for $\delta = p+q$, and whatever the weight vector $w \in \W$, no alternative, except possibly $b$, has a better score than $a$. (In fact, as the construction will exhibit, they are all worst than both $a$ and $b$, but the weaker fact is enough for our claim.)
