--- a/draft.tex
+++ b/draft.tex
@@ -361,7 +361,6 @@ is $\hat{v}_{j}(y) = 1+\card{A}-\card{{\ppref_j}(x)}$, where ${\ppref_j}(x)$ des
 %In summary, some best completion $\pref$ satisfies two properties: (1) for all $c \pinc x$, $c \pref x$; and (2) for all $c \pinc y$, if not $c \pref x \pref y$ then $y \pref c$. 
 %These two properties are intuitively understandable by observing that maximizing the PMR requires placing $x$ as low as possible, hence the first property; and $y$ as high as possible, hence the second property, with the exception that sometimes it is not possible to satisfy both goals and noting that the first goal is more important by convexity of the weights. 
 %A proof that this reasoning is correct is in \cref{sec:prfCompl}.
-
 \begin{claim}
 The $\PMR$ can be written as:
 \begin{align} 
@@ -375,16 +374,17 @@ where the $\hat{\alpha}_{r}^{y}$ (resp. $\hat{\alpha}_{r}^{x}$)  is the number o
 \end{claim}
 %\[ \alpha_{i} = \sum_{j=1}^{n}  I[\hat{v}_{j}(y)=i] - I[\hat{v}_{j}(x)=i]\]
 %We now show that the pairwise maximum regret can be computed with a linear program.
-The PMR can be now computed by optimizing a linear program (LP) where the decision variables correspond to the weights attached to the different positions.
-Constraints are on the feasible parameters (the weights of the scoring rules).
-We remind that the preferences of the char are encoded with linear constraints $\Co_{W}$.
+%The PMR can be now computed by optimizing a linear program (LP). 
+%Constraints are on the feasible parameters (the weights of the scoring rules).
+The last proposition shows us that PMR is linear in the weights.
+We remind that the preferences of the chair are encoded with linear constraints $\Co_{W}$.
 % contraints represent the preferences $\Co_{W}$ of the chair about the scoring rule.
-The pairwise max regret $\PMR(x,y; \pprofile,W)$ is now obtained as the solution of the following linear program defined on the variables $w_1, …, w_m$. 
+The pairwise max regret $\PMR(x,y; \pprofile,W)$ can be obtained as the solution of the following linear program defined on the variables $w_1, …, w_m$ (weights attached to the different positions). 
 \begin{align*}
 \max_{\w} & \sum_{r=1}^m (\hat{\alpha}_{r}^{y} - \hat{\alpha}_{r}^{x}) w_{r}\\
 \text{ s.t. } & \text{Equation } (\ref{eq:monotone})\\
 & \text{Equation } (\ref{eq:convexity})\\
-& \Co_W.
+& \Co_W
 \end{align*}
 Note that given our choice $w_{1}=1$ and $w_{m}=0$, there are only $m-2$ variables 
 (we leave $w_{1}$ and $w_{m}$ in the LP just for clarity of presentation).
