--- a/draft.tex
+++ b/draft.tex
@@ -73,6 +73,7 @@
 \newcommand{\W}{\mathcal{W}}
 \newcommand{\pw}{W}%our knowledge about the weights
 \newcommand{\powersetz}[1]{\mathscr{P}^*(#1)}
+\newcommand{\strat}[1]{\emph{#1}}
 
 \DeclareMathOperator{\Regret}{Regret}
 \DeclareMathOperator{\SCORE}{Score}
@@ -90,6 +91,7 @@
 
 \DeclarePairedDelimiter\set{\{}{\}}
 \DeclarePairedDelimiter\card{\lvert}{\rvert}
+\DeclarePairedDelimiter\abs{\lvert}{\rvert}
 
 %TODO remove this before submission
 	\tolerance=2000
@@ -486,66 +488,49 @@ d& 1& 2& 4& 6 \\
 \]
 \end{example}
 
-
-
 \paragraph{Elicitation strategies}
+\commentOC{TODO move this.} At this stage, we are content that a procedure exists to transform our questions to questions about winners of a PSR. Further studies would investigate, for example, what is lost in terms of elicitation efficiency when we are forced to restrain to realistic concrete questions, meaning, questions involving small profiles; or investigate the relationship between our understanding of scores as (cardinal) utility and (ordinal) scores as definition of a PSR.
 
-We develop some elicitation strategies for simultaneous elicitation of voters' preferences and of the scoring rule.
-Starting from some initial partial knowledge, our goal is to learn both the scoring rule function and the agents' preferences.
-While it is of course possible doing full elicitation of the weights and afterwards elicit the agents' preferences (or the other way around) we propose an interleaved approach.
-In our interactive  protocol for simultaneously eliciting the preferences of the chair about the voting rule and the voters' preferences about the alternatives.
-Indeed, it can be beneficial to interleave questions asked to the chair and questions asked to voters, depending on which is estimated to be more informative.
+We develop several elicitation strategies for simultaneous elicitation of agents' preferences and of the scoring rule.
+While it is of course possible to first fully elicit the agents’ preferences and afterwards elicit weights, we also want to propose interleaved approaches and compare them experimentally.
+Indeed, it can be beneficial to interleave questions asked to the chair and questions asked to agents, depending on which is estimated to be more informative.
 
-Answers given by the chair about the scoring rule refine our knowledge of the weights $w_1,\ldots,w_n$, while
-answers given by one of the voters refine our knowledge about the voters preferences.
+We define here the various strategies we tested experimentally. A strategy is a function (or a random process) that gives us, given our partial knowledge so far $(\pprofile, W)$, a question that should be asked, according to that strategy. 
 
-At each step we need to decide whether we want to ask a question to the chair or to one of the agents (and to which agent in particular). We assume that we can ask comparison queries to the agents and questions comparing the differences of weights to the chair. 
+Among them, the \strat{Random} strategy is used to capture how hard an elicitation problem is, by giving us a baseline: using it we can estimate how fast the regret diminishes when we ask questions randomly. 
+%It also estimates how much information of that kind we would need if we assume the information would not be elicited experimentally using an active learning approach, but would be collected empirically as they randomly appear to us. (This estimate is however very rough as it is most relevant only when the observations follow the same random distribution as the one we chose.) 
+Choosing the questions purely randomly however, that is, independently of what we know already, would be pointless, as we would most of the time ask questions we already know the answer of. Thus, that strategy choses questions in a minimally “clever” way, just by picking questions in a set of a priori relevant questions. 
+The \strat{Random} strategy first decides with a probability of $1/2$ each whether it will ask a question about weights or a question about a preference ordering (unless the profile is already known entirely). If it opted for a question about weights, it draws one rank in $2 ≤ r ≤ m-2$ equiprobably, takes the middle of the interval of values for $\lambda$ that are still possible considering our knowledge so far, and asks whether $w_r - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$. The intervals are initialized to $[1, n]$. If it opted for a question to agents, it draws equiprobably among the voters whose preference is not known entirely; picks an alternative $a$ randomly with equal probability among those involved in some incomparabilities in $\ppref_j$; and picks an alternative $b$ with equal probability among those incomparable with $a$ in $\ppref_j$.
 
-In the experiments we want to compare the interleaved approach with a baseline challenger, a method  that elicits the preferences of the voters first and then the voting rule (or the other way around)
-
-%Type of questions that we can ask to the chair:	bound queries (Is this alternative among your top-k most preferred items?), comparison queries (do you prefer alternative x or alternative y?).
-
-% we discuss the different forms of queries and develop several query strategies 
-%\paragraph{Query methods}
-We consider different strategies to determine the next question to ask given the current information.
-%{\em Some ideas: decompose the regret into two components, one due to $\w$ and one due to $\pprofile$, and ask a question to the chair / or to one of the agents depending on which is highest}
-
-%We consider strategies of the following form
-%{\em if} condition {\em then} ask comparison query {\em else} ask a chair query
-%Define a score associated to each potential query that we may ask.
-
-\begin{itemize}
-\item {\em Current solution strategy}: consider the solution of the minimax regret game, 
- $(x^{*},\bar{y},\bar{\profile},\bar{\w})$, where $x^{*}$ is the minimax regret optimal alternative,  $\bar{y} = \arg \max_{y \in A} \PMR(x,y; \pprofile, W)$; is the adversarial choice, and $\bar{\profile}$ and $\w$ are the instantiations\footnote{ $\bar{\profile} \!=\! \arg \max_{\profile \in C(\pprofile)} s(y; \profile, \bar{\w}) \!-\! s(x; \profile, \bar{\w})$; and $\bar{\w} \!=\! \arg \max_{w \in W} s(y; \pprofile, w) \!-\! s(x; \pprofile, w)$ .} of the weights associated with maximum regret.
- % Determine the part of ``regret'' due to uncertainty in $w$
-% Determine the part of ``regret' due to uncertainty in $p$
+We also define the \strat{Extreme completions} strategy \commentOC{Previously called Current solution}, which we consider as a more realistic baseline. 
+Consider the solution of the minimax regret game, 
+ $(x^{*},\bar{y},\bar{\profile},\bar{\w})$, where $x^{*}$ is the minimax regret optimal alternative, and $\bar{y} = \arg \max_{y \in A} \PMR(x,y; \pprofile, W)$, $\bar{\profile}$ and $\bar{\w}$ are the adversarial choices, thus, the instantiations that, given the choice of $x^*$, maximize the regret. 
+%\footnote{ $\bar{\profile} \!=\! \arg \max_{\profile \in C(\pprofile)} s(y; \profile, \bar{\w}) \!-\! s(x; \profile, \bar{\w})$; and $\bar{\w} \!=\! \arg \max_{w \in W} s(y; \pprofile, w) \!-\! s(x; \pprofile, w)$ .} 
 Define: 
 \begin{align}
-\tau_{1} & = \min_{\w \in W} s(\bar{x}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w)  \label{eq:tau1} \\
-\tau_{2} & = \min_{\profile \in C(\pprofile)} s(\bar{x},\profile, \bar{\w}) -  s(x^{*}; \profile, \bar{\w}).
+\tau_{1} & = \min_{\w \in W} s(\bar{y}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w),  \label{eq:tau1} \\
+\tau_{2} & = \min_{\profile \in C(\pprofile)} s(\bar{y},\profile, \bar{\w}) -  s(x^{*}; \profile, \bar{\w}).
 \end{align}
-Intuitively the quantity $\MMR - \tau_{1} $ measures the contribution to regret of our uncertainty about the weights $\w$, while $\MMR - \tau_{2} $ measures the uncertainty about the profile.
-Therefore, whenever $\tau_{1} < \tau_{2}$ we ask a question to the chair, and compare $\bar{\w}$ and $\w_{\tau}$. the argmax of Eq. (\ref{eq:tau1}), componentwise to find the position $r$ that is most valuable to ask about.  
-Instead, if $\tau_{1} > \tau_{2}$ we ask a question to one of the agent, with the following heuristics.
- 
- \item One possibility is to consider the MMR {\em a posteriori}. Assume that the different answers to a query induce the possible sets to be $(\pprofile_1,W_1)$ and $(\pprofile_2,W_2)$, then the score according to worst-case maximum regret is:
-\[\SCORE(x)= \max_{i=1,2} \MMR(\pprofile_i,W_i) \]
-In this case, the query with least value is chosen.
+Intuitively the quantity $\MMR - \tau_{1} = \max_{\w \in W} s(\bar{y}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w) - \min_{\w \in W} s(\bar{y}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w)$ estimates the contribution to regret of our uncertainty about the weights $\w$, while $\MMR - \tau_{2} $ estimates the uncertainty about the profile.
+Therefore, whenever $\tau_{1} < \tau_{2}$ we ask a question to the chair, and compare componentwise $\bar{\w}$ and $\w^{\tau}$, the argmax of Eq. (\ref{eq:tau1}), to find the position $r$ that is most valuable to ask about (the one that maximizes $\abs{\bar{\w}_r - \w^{\tau}_r}$).  
+Instead, if $\tau_{1} > \tau_{2}$ we ask a question to one of the agent, picking the alternative randomly as described above. \commentOC{We’d better check for each $j$ the difference between the difference of the ranks of $x$ and $y$ in the worst $v$ and in the best $v$ and pick a voter related to highest difference, pick $x$ or $y$ with $1/2$ chances, and pick an incomparable alternative equiprobably.}
 
-What is the complexity of this strategy? Let's define $Q$ as the set of all possible queries we can address to the agents and to the chair. The worst case is represented by the situation in which we do not have any information about both the agents' preferences and the weights constraints. In this case we can address $\binom{m}{2}=\frac{m(m-1)}{2}$ questions to each agent. Moreover, we need to ask at least $m$ questions to the chair. Then, each question induces two possible pairs of $(\pprofile,W)$ for each of which we compute the $\MMR$, whose worst case complexity is $O(nm^3)$. Thus, the cardinality of $Q$ in the worst case is $\approx n \cdot \frac{m(m-1)}{2} + \lambda m$, and the worst case time complexity of the strategy is $O(n^2m^5)$.
+The \strat{Pessimistic} strategy selects the question that leads to minimal regret in the worst case, considering both possible answers to the question. Assume that a question leads to the possible new knowledge states $(\pprofile_1, W_1)$ and $(\pprofile_2, W_2)$, depending on the answer. Then the badness of the question in the worst case is:
+\[\max_{i=1,2} \MMR(\pprofile_i,W_i) \]
+This badness measure gives a way of picking questions among a set of possible questions, by picking one that minimizes the measure. Note that other aggregators than $\max$ can be used as well. The \strat{Pessimistic} strategy considers as possible questions the ones defined by the \strat{Random} strategy \commentOC{To check}. It uses a variant of the $\max$ as an aggregator: if the maximal $\MMR$ of two questions are equal, it prefers the question that has the lowest $\MMR$. We expect this strategy to perform very well, but only for very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$. For small dimensions, it gives us an estimate of an upper bound to the possible quality of a strategy.
 
-\item Two phase method.
+\commentOC{TODO Continue here.}
+Two phase method.
 Ask a predefined (non adaptive) sequence of questions in order to learn the weights $w$ of the scoring rule).
 Then use minimax regret as in Lu and Boutilier.
 
 %\item Non-interleaved regret method: comparison with a method based on minimax regret, but not interleaved. 
 
-\item Non-interleaved non-regret strategies (useful as benchmarks).	
+Non-interleaved non-regret strategies (useful as benchmarks).	
 	\begin{itemize}
 		\item Random strategy: randomly chooses an agent $i$ and a comparison query such that $x \pinc_i y$.
 		\item {\em Volumetric} strategy: chooses an agent $i$ and a query that maximizes the number of new pairwise preferences revealed given the worst response.
 	\end{itemize}
-\end{itemize}
 
 % unless $\MMR=0$ we ask a question that reduce uncertainty
 
